[package]
name = "libsphinx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.38"
curve25519-dalek = "3"
dryoc = "0.4.3"
nettext = "0.3.3"
rand = "0.7"

[dev-dependencies]
hex = "0.4.3"